// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Avatar PCサイズのスナップショットテスト 1`] = `
<body>
  <div>
    <button
      aria-controls="avatar"
      aria-haspopup="true"
      class="MuiButtonBase-root MuiIconButton-root"
      tabindex="0"
      type="button"
    >
      <span
        class="MuiIconButton-label"
      >
        <div
          class="MuiAvatar-root MuiAvatar-circle makeStyles-avatar-15 MuiAvatar-colorDefault"
        >
          a
        </div>
      </span>
      <span
        class="MuiTouchRipple-root"
      />
    </button>
  </div>
</body>
`;

exports[`Avatar スマホサイズのスナップショットテスト 1`] = `
<body>
  <div>
    <button
      aria-controls="avatar"
      aria-haspopup="true"
      class="MuiButtonBase-root MuiIconButton-root"
      tabindex="0"
      type="button"
    >
      <span
        class="MuiIconButton-label"
      >
        <div
          class="MuiAvatar-root MuiAvatar-circle makeStyles-avatar-33 makeStyles-avatar_small-34 MuiAvatar-colorDefault"
        >
          a
        </div>
      </span>
      <span
        class="MuiTouchRipple-root"
      />
    </button>
  </div>
</body>
`;
